third_party/move/move-compiler-v2/tests/checking/typing/lambda_widen.exp

Diagnostics:
error: expected function type has argument of type `&integer` but `&mut integer` was provided
   ┌─ tests/checking/typing/lambda_widen.move:33:38
   │
33 │         let r = use_mut2_ref(&mut v, |x| *(freeze(x)));
   │                                      ^^^^^^^^^^^^^^^^

error: expected function type has argument of type `&integer` but `&mut integer` was provided
   ┌─ tests/checking/typing/lambda_widen.move:43:37
   │
43 │         let r = use_imm_ref(&mut v, |x| *(freeze(x)));
   │                                     ^^^^^^^^^^^^^^^^
